calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
