calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: calibre.super.fish
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 80
  tls:
    - hosts:
        - calibre.super.fish
      secretName: calibre.super.fish
